--- a/16.5_Zadanie_PCA.ipynb
+++ b/16.5_Zadanie_PCA.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Zadanie: pingwiny!\n",
-    "Wykorzystaj zbiór penguins.csv (pobierz), w którym są cechy dla różnych gatunków pingwinów, wykonaj eksploracje, a następnie naucz poznane w tym module modele."
+    "### Zadanie: PCA\n",
+    "Dodaj PCA do problemu klasyfikacji i regresji z poprzednich modułów. Wynik przedstaw Mentorowi."
    ]
   },
   {
@@ -1887,7 +1888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
